// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post archive fetchs from a different endpoint with extra params 1`] = `
Array [
  Array [
    Object {
      "endpoint": "multiple-post-type",
      "params": Object {
        "_embed": true,
        "page": 1,
        "search": undefined,
        "type": Array [
          "post",
          "travel",
        ],
      },
    },
  ],
]
`;

exports[`post archive works with first page 1`] = `
Object {
  "/": Object {
    "isArchive": true,
    "isFetching": true,
    "isPostArchive": true,
    "isPostTypeArchive": true,
    "isReady": false,
    "items": Array [
      Object {
        "id": 60,
        "link": "/2016/the-beauties-of-gullfoss/",
        "type": "post",
      },
      Object {
        "id": 57,
        "link": "/2016/shinjuku-gyoen-national-garden/",
        "type": "post",
      },
      Object {
        "id": 54,
        "link": "/2016/lower-antelope-canyon/",
        "type": "post",
      },
      Object {
        "id": 51,
        "link": "/2016/sunrise-at-phu-quoc-island/",
        "type": "post",
      },
      Object {
        "id": 46,
        "link": "/2016/small-and-picturesque-french-villages/",
        "type": "post",
      },
      Object {
        "id": 42,
        "link": "/2016/kebumen/",
        "type": "post",
      },
      Object {
        "id": 36,
        "link": "/2016/banff-national-park/",
        "type": "post",
      },
      Object {
        "id": 33,
        "link": "/2016/the-al-hajar-mountains/",
        "type": "post",
      },
      Object {
        "id": 30,
        "link": "/2016/machu-picchu/",
        "type": "post",
      },
      Object {
        "id": 26,
        "link": "/2016/discovering-iceland/",
        "type": "post",
      },
    ],
    "total": 65,
    "totalPages": 7,
    "type": "post",
  },
}
`;

exports[`post archive works with first page 2`] = `
Object {
  "attachment": Array [
    27,
    34,
    37,
    45,
    47,
    52,
    55,
    62,
    76,
    107,
  ],
  "author": Array [
    1,
    2,
    3,
    4,
  ],
  "category": Array [
    3,
    4,
    5,
    6,
    7,
    8,
    56,
    57,
    58,
    59,
    108,
  ],
  "post": Array [
    26,
    30,
    33,
    36,
    42,
    46,
    51,
    54,
    57,
    60,
  ],
  "tag": Array [
    9,
    10,
    11,
    13,
    14,
    15,
    16,
    18,
    19,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
  ],
}
`;

exports[`post archive works with pagination 1`] = `
Object {
  "/page/2/": Object {
    "isArchive": true,
    "isFetching": true,
    "isPostArchive": true,
    "isPostTypeArchive": true,
    "isReady": false,
    "items": Array [
      Object {
        "id": 23,
        "link": "/2016/switzerlands-mountains/",
        "type": "post",
      },
      Object {
        "id": 17,
        "link": "/2016/latest-trip-to-india/",
        "type": "post",
      },
      Object {
        "id": 12,
        "link": "/2016/somewhere-in-romania/",
        "type": "post",
      },
      Object {
        "id": 8,
        "link": "/2016/paris-city-of-light/",
        "type": "post",
      },
      Object {
        "id": 1,
        "link": "/2016/iceland/",
        "type": "post",
      },
      Object {
        "id": 1801,
        "link": "/2013/block-image/",
        "type": "post",
      },
      Object {
        "id": 1798,
        "link": "/2013/block-button/",
        "type": "post",
      },
      Object {
        "id": 1797,
        "link": "/2013/block-cover/",
        "type": "post",
      },
      Object {
        "id": 1796,
        "link": "/2013/column-blocks/",
        "type": "post",
      },
      Object {
        "id": 1800,
        "link": "/2013/block-gallery/",
        "type": "post",
      },
    ],
    "total": 65,
    "totalPages": 7,
    "type": "post",
  },
}
`;

exports[`post archive works with pagination 2`] = `
Object {
  "attachment": Array [
    6,
    9,
    13,
    18,
    24,
  ],
  "author": Array [
    2,
    3,
    4,
    6,
  ],
  "category": Array [
    3,
    4,
    5,
    6,
    7,
    8,
    56,
    57,
    58,
    59,
    66,
    254,
  ],
  "post": Array [
    1,
    8,
    12,
    17,
    23,
    1796,
    1797,
    1798,
    1800,
    1801,
  ],
  "tag": Array [
    9,
    13,
    25,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
    51,
    52,
    53,
    169,
    253,
  ],
}
`;
